<resources>
    <string name="app_name">Calculadora de Soja</string>
    <string name="main_hello">Olá,</string>
    <string name="welcome_text">No Calculadora de Soja você poderá realizar estimativas de rendimento de soja e obter um maior controle sobre seu campo.</string>
    <string name="welcome_title">Bem vindo ao Calculadora de Soja</string>
    <string name="continuar">Continuar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escolha_sistema_medidas">Antes de prosseguir, por favor escolha o sistema de medidas que deseja utilizar no aplicativo.</string>
    <string name="sistema_metrico_texto">Ao escolher esse sistema, todas as entradas de dados e os resultados serão nas unidades de medida do sistema métrico, como hectares, quilogramas(kg) e metros (m).</string>
    <string name="sistema_metrico">Sistema métrico</string>
    <string name="sistema_imperial_texto">Ao escolher esse sistema, todas as entradas de dados e os resultados serão nas unidades de medida do sistema imperial, como acre, libras(lb), polegadas(pol) e pés.</string>
    <string name="sistema_imperial">Sistema imperial</string>
    <string name="entendi">Entendi</string>
    <string name="alter_config_text">Na tela anterior você escolheu um sistema de medidas, este sistema pode ser alterado a qualquer momento durante o uso do app.</string>
    <string name="alter_config_title">Alterar configurações do app</string>
    <string name="manage_farms_block_text">Aqui você poderá visualizar, editar e excluir suas fazendas e quadras. Fazendas e quadras não são obrigatórias para realizar estimativas, mas as estimativas podem ser associadas à uma quadra, o que pode ajudar a manter um bom controle de suas áreas e suas produções.</string>
    <string name="manage_farms_block_title">Gerenciar fazendas e quadras</string>
    <string name="show_estimates_title">Visualizar e realizar estimativas de rendimento de soja</string>
    <string name="show_estimates_text">Aqui você poderá realizar estimativas de rendimentos de soja que ficarão armazenadas no sistema, assim você poderá visualizar e excluir a qualquer momento</string>
    <string name="farms_blocks">Fazendas e Quadras</string>
    <string name="add_new_farm">Adicionar uma nova fazenda</string>
    <string name="add_new_block">Adicionar uma nova quadra</string>
    <string name="nome_da_fazenda">Nome da fazenda</string>
    <string name="insira_o_nome_da_sua_fazenda">Insira o nome da sua fazenda</string>
    <string name="cidade">Cidade</string>
    <string name="insira_a_cidade_da_sua_fazenda">Insira a cidade da sua fazenda</string>
    <string name="salvar">Salvar</string>
    <string name="realizar_estimativa">Realizar uma estimativa de rendimento</string>
    <string name="estimate">Estimar</string>
    <string name="farm">Fazenda</string>
    <string name="block">Quadra</string>
    <string name="date">Data</string>
    <string name="sampled_points">Pontos amostrados</string>
    <string name="row_spacing">Espaçamento entre fileiras</string>
    <string name="weigh_1000_grains">Peso de mil (1.000) grãos</string>
    <string name="show_in_imperial_system">Exibir no sistema imperial</string>
    <string name="save">Salvar</string>
    <string name="measurements_systems">Sistemas de medidas</string>
    <string name="settings">Configurações</string>
    <string name="not_farm">Nenhuma fazenda cadastrada.\nAdicione uma nova fazenda clicando no botão "+" abaixo.</string>
    <string name="not_block">Nenhuma quadra cadastrada.\nAdicione uma nova quadra clicando no botão "+" abaixo.</string>
    <string name="select_farm_and_block">Selecione a fazenda e a quadra</string>
    <string name="not_choose_farm_or_block">Não associar essa estimativa</string>
    <string name="number_sampling_points">Número de pontos amostrais</string>
    <string name="insert_sampling_points">Insira quantos pontos você deseja amostrar</string>
    <string name="sampling_points_size">Tamanho dos pontos amostrais</string>
    <string name="peso_mil_graos">Peso de 1.000 (mil) grãos de soja</string>
    <string name="meters">m</string>
    <string name="kg">kg</string>
    <string name="feet">pés</string>
    <string name="inches">pol</string>
    <string name="lb">lb</string>
    <string name="bushels_acre">bushels/acre</string>
    <string name="kg_hectares">kg/ha</string>
</resources>